# RAG-GoogleGenAI-Langchain-FAISS-Streamlit

./: Dockerfile  README.md  pyproject.toml
app/: app.py  utils.py
